--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "node-sass": "^7.0.0",
     "stylelint": "^14.2.0",
     "yargs": "^17.3.1"
